# newbs-source

./: .gitignore  LICENSE  Makefile  Neostrip.cpp  Neostrip.h  configure  neostrip-demo.c  neostrip-demo.cpp  newbs-action.c  newbs-init.sh.in  newbs-parse.c  newbs-reboot.c  newbs-util.c  newbs-util.h  utils.h
init/: .gitignore  Makefile  fsmagic.c  gen_init_cpio.c  init.cpp  initramfs_list.txt  lastboot-timestamp.service  log.c  newbs-action.c  newbs-reboot.c  newbs-util.h  newbs_init.h  switch_root.c
multiboot/: .gitignore  example-conf.txt  newbs.default.txt
neostrip-demo/: Makefile  Neostrip.cpp  neostrip-demo.cpp  utils.cpp
swdl/: .gitignore  CMakeLists.txt  Makefile  Makefile.am  build.sh  common.c  configure.ac  crc32.c  create.c  download.sh  ezmake.mk  log.c  mknImage.c  mknImage.h  newbs-swdl-functions.sh.in  newbs-swdl.in
swdl/lib/: common.c  log.c  nImage.h
swdl/mknImage/: check.c  crc32_cmd.c  create.c  mknImage.c  mknImage.h
swdl/newbs-swdl/: PError.cpp
swdl/swdl/: PError.cpp  PError.h  flashbanks.cpp  lib.cpp  main.cpp  newbs-swdl.cpp  newbs-swdl.h  program.cpp
wktest/: Makefile  wktest.c
